[tool.poetry]
name = "hypnos"
version = "0.1.0"
description = ""
authors = ["VJean"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "~3.7"
Flask = "^2"
Flask-Bcrypt = "^1"
Flask-Login = "0.5.0"
Flask-Migrate = "^2"
Flask-Script = "^2"
Flask-SQLAlchemy = "^2"
Flask-WTF = "^1.0"
WTForms-Alchemy = "^0.18"
WTForms-Components = "^0.10"
isodate = "0.6.0"
requests = "2.23.0"
pendulum = "2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
