[tool.poetry]
name = "hypnos"
version = "0.1.0"
description = ""
authors = ["VJean"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3"
werkzeug = "^3.0.0"
Flask-Bcrypt = "^1"
Flask-Login = "^0"
Flask-Migrate = "^2"
Flask-SQLAlchemy = "^3.0.2"
Flask-WTF = "^1"
WTForms-Alchemy = "^0.18"
WTForms-Components = "^0.10"
wtforms = "~3.1" # remove this line when wtforms-conponents is updated to 0.10.6 (including https://github.com/kvesteri/wtforms-components/pull/81)
isodate = "0.7.2"
requests = "^2.23.0"
pendulum = "^3"
uwsgi = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
